# libAMPLE-IO

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/public/AMPLE/IO/: FileInfo.h
src/: CMakeLists.txt
src/Darwin/Generic/: CMakeLists.txt
src/Darwin/Generic/FileInfo/: GetName.c
src/FreeBSD/: CMakeLists.txt
src/FreeBSD/Generic/FileInfo/: CMakeLists.txt
src/Generic/: CMakeLists.txt
src/Generic/Generic/AMPLE/: CMakeLists.txt
src/Generic/Generic/AMPLE/IO/FileInfo/: CMakeLists.txt  Constructor.c  Destructor.c
src/Generic/Generic/FileInfo/: CMakeLists.txt  Constructor.c  Destroy.c
src/Linux/Generic/: CMakeLists.txt
src/Linux/Generic/FileInfo/: CMakeLists.txt  GetExists.c  GetLength.c
src/POSIX/Generic/AMPLE/IO/FileInfo/: CMakeLists.txt  Exists.c  Length.c
src/Windows/Generic/AMPLE/IO/FileInfo/: CMakeLists.txt  Exists.c  Length.c
src/Windows/Generic/FileInfo/: CMakeLists.txt  GetExists.c  GetLength.c  GetName.c
